fix: changelog dialog overflow

--- a/src/renderer/components/changelog-dialog/changelog-dialog.less
+++ b/src/renderer/components/changelog-dialog/changelog-dialog.less
@@ -1,3 +1,13 @@
-.changelog-container {
-  padding: 10px;
+.changelog-dialog {
+  height: 520px;
+  width: 90%;
+
+  .changelog-container {
+    margin: 10px;
+    height: 100%;
+    .content {
+      overflow: scroll;
+      height: 90%;
+    }
+  }
 }
